--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class='intro'>
         <nav>
-            <a href="./airplane.html"><img src="./img/logo.png" alt=""></img></a>
+            <a href="./index.html"><img src="./img/logo.png" alt=""></img></a>
 
             <ul class='nav-links'>
                 <li>
