--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
     <section class='intro'>
         <nav>
-            <a href="./airplane.html"><img src="./img/logo.png" alt=""></img></a>
+            <a href="./index.html"><img src="./img/logo.png" alt=""></img></a>
             <ul class='nav-links'>
                 <li>
                     <a href="./about.html">About</a>
