--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
 
         <nav>
 
-            <a href="./airplane.html"><img src="./img/logo.png" alt=""></img></a>
+            <a href="./index.html"><img src="./img/logo.png" alt=""></img></a>
 
             <ul class='nav-links'>
 
