--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 
     <section class='intro'>
         <nav>
-            <a href="./airplane.html"><img src="./img/logo.png" alt=""></img></a>
+            <a href="./index.html"><img src="./img/logo.png" alt=""></img></a>
             <ul class='nav-links'>
                 <li>
                     <a href="./about.html">About</a>
