--- a/login.html
+++ b/login.html
@@ -158,7 +158,7 @@
                 })
 
                 if (user) {
-                    window.location = 'airplane.html'
+                    window.location = 'index.html'
                 }
 
             })
