--- a/signup.html
+++ b/signup.html
@@ -330,7 +330,7 @@
                 alert('user created!');
 
                 if (user) {
-                    window.location = 'airplane.html'
+                    window.location = 'index.html'
                 }
 
 
