--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
     logouts.addEventListener('click', (e) => {
         signOut(auth).then(() => {
-            window.location = 'airplane.html'
+            window.location = 'index.html'
         }).catch((error) => {
             alert(error)
         });
