--- a/profile.html
+++ b/profile.html
@@ -199,7 +199,7 @@
 
     logouts.addEventListener('click', (e) => {
         signOut(auth).then(() => {
-            window.location = 'airplane.html'
+            window.location = 'index.html'
         }).catch((error) => {
             alert(error)
         });
