--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="about.css">
     <title>Document</title>
 </head>
 
 <body>
-    <section class='intro'>
+    <section class="intro">
         <nav>
-            <a href="./index.html"><img src="./img/logo.png" alt=""></img></a>
+            <a href="./airplane.html"><img src="./img/logo.png" alt=""></img></a>
+
             <ul class='nav-links'>
                 <li>
                     <a href="./about.html">About</a>
@@ -54,7 +55,6 @@
                     <li class='log-outMo'>
                         <a href="#">Logout</a>
                     </li>
-
                 </ul>
 
             </div>
@@ -64,35 +64,84 @@
         </nav>
 
     </section>
-    <section class='container'>
-        <div class='main-card'>
-            <div class='card-one'>
-                <form action="" method="get" class="form">
-                    <div>
-                        <h1>Contact Us</h1>
-                    </div>
-                    <div class="form-input">
-                        <label for="name">Name: </label>
-                        <input type="text" name="name" id="name">
-                    </div>
-                    <div class="form-input">
-                        <label for="email">Email: </label>
-                        <input type="email" name="email" id="email" required>
-                    </div>
 
-                    <div class="form-input">
-                        <label for="text">Message:</label>
-                        <textarea name="text" rows="8" required>
-                         </textarea>
-                    </div>
 
-                    <div class="form-button">
-                        <input id='btn' type="submit" value="Send">
-                    </div>
-                </form>
+    <section class='bottom'>
+        <div class='bottom-content'>
+            <h3>Pack your bags. You're going on vacation.</h3>
+            <div class='premium-text'>
+                <p> <img src="./img/tick.svg" alt="">All the best flight deals to the most popular destinations</p>
+            </div>
+            <div class='premium-text'>
+                <p> <img src="./img/tick.svg" alt="">Urgent alerts when airlines accidentally offer flights up to 90%
+                </p>
+            </div>
+            <div class='premium-text'>
+                <p> <img src="./img/tick.svg" alt="">Peak season & holiday travel deals</p>
+            </div>
+            <div class='bottom-button'>
+                <button class='butt'><a href="./signup.html">Sign Up</a></button>
             </div>
         </div>
+    </section>
 
+
+    <div id='heading'>
+        <h1>We find cheap deals with your comfort in mind</h1>
+    </div>
+    <section class='benefits'>
+        <div id='icons1'>
+            <img src="./img/about-mail.gif" alt="">
+            <p>
+                All flight deals sent, will be for flights departing Vancouver. Which doesn't neccarisly mean all deals
+                will be departing from YVR</p>
+        </div>
+        <div id='icons2'>
+
+            <img src="./img/about-airplane.gif" alt="">
+            <p>
+                Our team of Flight Experts will email you whenever there's an amazing deal from an airport you follow.
+            </p>
+        </div>
+        <div id='icons3'>
+
+            <img src="./img/screen.gif" alt="">
+            <p>
+                Deal alerts include a booking link, price details, and estimate how long the deal might last. Don't
+                dilly dally!
+            </p>
+        </div>
+    </section>
+
+
+
+    <section>
+        <div class='image'>
+        </div>
+    </section>
+
+    <div id='heading'>
+        <h1>We do the hard work for you</h1>
+    </div>
+    <section class='benefits'>
+        <div id='iconsOne'>
+            <img src="./img/gif.ticket.gif" alt="">
+            <p>
+                Most deals are 40-90% off normal prices. If it's not an amazing deal, we won't send it. Period.</p>
+        </div>
+        <div id='iconsTwo'>
+
+            <img src="./img/globe.gif" alt="">
+            <p>
+                Most deals are for non-stop or single-stop flights. Occasionally even business class. </p>
+        </div>
+        <div id='iconsThree'>
+
+            <img src="./img/plane.gif" alt="">
+            <p>
+                We avoid bad airlines and highlight deals on top-rated airlines so you travel in comfort.
+            </p>
+        </div>
     </section>
     <section class='bottom-nav'>
         <div class='bottom-nav-content'>
@@ -133,6 +182,7 @@
     </section>
     <script src="airplane.js"></script>
 </body>
+
 <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.1/firebase-app.js";
@@ -160,6 +210,13 @@
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
     const auth = getAuth();
+    var logins = document.querySelector('.logins')
+    var logouts = document.querySelector('.log-out')
+    var profile = document.querySelector('.profile')
+
+    var loginsMo = document.querySelector('.loginsMo')
+    var logoutsMo = document.querySelector('.log-outMo')
+    var profileMo = document.querySelector('.profileMo')
 
     onAuthStateChanged(auth, (user) => {
         if (user) {
@@ -185,7 +242,7 @@
 
     logouts.addEventListener('click', (e) => {
         signOut(auth).then(() => {
-            window.location = 'airplane.html'
+            window.location = 'index.html'
         }).catch((error) => {
             alert(error)
         });
@@ -195,5 +252,6 @@
 
 
 </script>
+
 
 </html>
