--- a/about.html
+++ b/about.html
@@ -242,7 +242,7 @@
 
     logouts.addEventListener('click', (e) => {
         signOut(auth).then(() => {
-            window.location = 'airplane.html'
+            window.location = 'index.html'
         }).catch((error) => {
             alert(error)
         });
