--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                         <a href="./login.html">Login</a>
 
                     </li>
-                    <li class='log-outMo'>
+                    <li class='log-out'>
                         <a href="#">Logout</a>
                     </li>
 
