--- a/about.html
+++ b/about.html
@@ -248,6 +248,15 @@
         });
 
     })
+    
+    logoutsMo.addEventListener('click', (e) => {
+        signOut(auth).then(() => {
+            window.location = 'index.html'
+        }).catch((error) => {
+            alert(error)
+        });
+
+    })
 
 
 
