--- a/contact.html
+++ b/contact.html
@@ -195,6 +195,15 @@
         });
 
     })
+    
+      logoutsMo.addEventListener('click', (e) => {
+        signOut(auth).then(() => {
+            window.location = 'index.html'
+        }).catch((error) => {
+            alert(error)
+        });
+
+    })
 
 
 
