--- a/profile.html
+++ b/profile.html
@@ -222,6 +222,15 @@
         });
 
     })
+    
+      logoutsMo.addEventListener('click', (e) => {
+        signOut(auth).then(() => {
+            window.location = 'index.html'
+        }).catch((error) => {
+            alert(error)
+        });
+
+    })
 
 </script>
 
