--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </nav>
         <div id='bio'>
             <h1>Save up to 90% on international flights</h1>
-            <p>Get email alerts about cheap flights <br>departing from your favorite airports.</p>
+            <p>Get email alerts about cheap flights <br>departing from your favorite airports</p>
             <div class='deals-button'>
                 <button class='butt'><a href="./signup.html">Sign Up</a></button>
             </div>
