--- a/signup.html
+++ b/signup.html
@@ -130,6 +130,14 @@
                         <input type="password" name="password" id="password" required>
 
                     </div>
+                    
+                      <div class="form-input">
+
+                        <label for="password">Confirm Password: </label>
+
+                        <input type="password" name="password" id="passwordCon" required>
+
+                    </div>
 
 
 
